# RestClient

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: connection.h  dealjson.h  restclient.h
client/src/: connection.cc  dealjson.cpp  main.cpp  restclient.cc
server/: CMakeLists.txt
server/include/: dealjson.h  http_server.h
server/src/: dealjson.cpp  http_server.cpp  main.cpp
