#cmake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
#项目名称
PROJECT(server)

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
#使能c++11
SET(CMAKE_CXX_STANDARD 11)

# 设置编译目标名称
SET(LINK_TARGETNAME httpserver)

# 设置链接库名称
SET(LINK_LIB_LIST  )
# 设置链接库目录
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/lib)

#设置头文件目录
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/3rdparty/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# 设置变量，表示所有的源文件
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src LINK_SOURCEFILES)

# add the executable
message(STATUS "add targent name:${LINK_TARGETNAME}")
ADD_EXECUTABLE(${LINK_TARGETNAME}  ${LINK_SOURCEFILES} )
# 依赖的库文件
TARGET_LINK_LIBRARIES(${LINK_TARGETNAME} ${LINK_LIB_LIST})